Updated skill request service using custom exceptions